# aerial-autonomy-stack

./: .gitignore  README.md  README_new.md  docker-compose.yml
.github/workflows/: aas-gym-pip-install.yml  aircraft-amd64-build.yml  aircraft-arm64-build.yml  ground-amd64-build.yml  simulation-amd64-build.yml
aas-gym/: README.md
aas-gym/src/aas_gym/: aas_env.py
aircraft/: aircraft.yml.erb
aircraft/aircraft_resources/missions/: test_mission.yaml
aircraft/aircraft_resources/patches/: cancellable_action.py
aircraft/aircraft_ws/src/autopilot_interface/: CMakeLists.txt  package.xml
aircraft/aircraft_ws/src/mission/: package.xml
aircraft/aircraft_ws/src/offboard_control/: CMakeLists.txt  package.xml
aircraft/aircraft_ws/src/offboard_control/src/: ardupilot_guided.cpp  px4_offboard.cpp
aircraft/aircraft_ws/src/state_sharing/: CMakeLists.txt  package.xml
ground/: ground.yml.erb
ground/ground_resources/comms/: mavlink_router_base.conf
ground/ground_ws/src/ground_system_py/: package.xml  setup.cfg  setup.py
scripts/: deploy_build.sh  deploy_run.sh  gym_run.py  gymnasium_examples.py  launch_sim.sh  sim_build.sh  sim_run.sh
scripts/docker/: Dockerfile.aircraft  Dockerfile.ground  Dockerfile.simulation
simulation/: simulation.yml.erb
simulation/simulation_resources/aircraft_models/alti_transition_quad_1/: ardupilot-4.6.params  model.config  model.sdf
simulation/simulation_resources/aircraft_models/iris_with_ardupilot_1/: ardupilot-4.6.params  model.config  model.sdf
simulation/simulation_resources/aircraft_models/standard_vtol/: 5141_gz_aas_standard_vtol
simulation/simulation_resources/comms/gz_gst_bridge/: CMakeLists.txt  gz_gst_bridge.py  main.cpp
simulation/simulation_resources/patches/: plot_logs.sh  px4-v1.16.0.patch
simulation/simulation_resources/scripts/: gz_step.py  gz_wind.py
simulation/simulation_resources/simulation_worlds/: _create_ardupilot_world.sh  apple_orchard.sdf  impalpable_greyness.sdf  populated_ardupilot.sdf  shibuya_crossing.sdf  swiss_town.sdf
supplementary/: RATIONALE.md  REQUIREMENTS_UBUNTU.md  REQUIREMENTS_WSL.md  SETUP_AVIONICS.md
tests/: performance.sh
(+16 files in other folders)
